--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -5,8 +5,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content:flex-end;
+  align-items: center; 
   height: 70vh;
 }
 
